--- a/admin-frontend/src/style/style.css
+++ b/admin-frontend/src/style/style.css
@@ -18,7 +18,7 @@
   }
   
 .logo {
-    width: 20%;
+    width: 18%;
   }
   
 .v-image__image {
@@ -95,8 +95,6 @@
 
 #operation-icon{
     width: 60px;
- 
-   
 }
 
 #search-container{
@@ -162,3 +160,106 @@
 .v-list__tile{
   border-bottom: 1px solid rgba(0,0,0,0.12);
 }
+
+.v-datatable__actions__select{
+  font-size: 15px;
+}
+
+.v-datatable__actions__pagination{
+  font-size: 15px;
+}
+
+.v-datatable__actions__select .v-select__selections .v-select__selection--comma{
+  font-size: 15px;
+}
+
+.brand-container   {
+  background-color: white;
+  color: black;
+  padding: 10px 50px;
+  text-align: center;
+  text-decoration: none;
+  /* display: inline-block; */
+  width: 300px;
+  height: 50px;
+  font-size: 18px;
+  border-radius: 10px;
+  border: 3px solid #FFC5B5;
+}
+
+.brand-list{
+  margin: 20px 60px;
+}
+
+.brand-container:hover {
+  animation-name: example;
+  animation-duration: 0.25s;
+  box-shadow: 0 8px 12px #C0C0C0;
+}
+
+.detail-list{
+  margin: 60;
+}
+
+.detail-container   {
+  background-color: #FFC5B5;
+  color: black;
+  padding: 30px 50px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+   width: 600px;
+  height: 300px; 
+  font-size: 18px;
+  border-radius: 10px;
+  margin: 0 20px;
+}
+
+td .detail-name{
+  font-weight: 800;
+}
+
+.detail-container:hover {
+  animation-name: example;
+  animation-duration: 0.25s;
+  box-shadow: 0 8px 12px #C0C0C0;
+}
+
+.body-content{
+  background-color: white;
+}
+
+.title{
+  font-size: 42px;
+  margin: 20px 50px 0 50px;
+}
+
+.lipstickList{
+  width: 150px;
+  text-align: center;
+  margin: 0 65px;
+}
+
+.accent--text{
+  color: #FFC5B5 !important;
+}
+
+.table-left{
+  text-align: right;
+  padding-right: 12px;
+}
+
+.table-right{
+  text-align: left;
+}
+
+hr{
+  border-top: 1px solid#DCDCDC;
+}
+
+.store{
+  width: 180px;
+  text-align: center;
+  margin: 0 60px;
+}
+
