--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,5 +1,5 @@
 .v-content {
-  /* background-image: url("../assets/lipster-background.png");
+  /* background-image: url('../assets/lipster-background.png');
   background-repeat: repeat; */
   width: 100%;
   height: 100%;
