--- a/src/style/style.css
+++ b/src/style/style.css
@@ -288,7 +288,6 @@ hr{
   width: 20px;
   height: 20px;
   border: 3px solid black;
-  background-color: #DC143C;
 }
 
 #color-list{
@@ -324,5 +323,9 @@ img.lipstickList{
 
 .operation-side{
   float: left;
+}
+
+.image-container{
+  width: 70px;
 }
 
