--- a/src/style/style.css
+++ b/src/style/style.css
@@ -182,10 +182,10 @@
   background-color: white;
   text-align: center;
   /* display: inline-block; */
-  width: 320px;
-  height: 280px;
-  border-radius: 10px;
-  border: 3px solid #d3d3d3;
+  width: 280px;
+  height: 290px;
+  /* border-radius: 10px; */
+  border: 1px solid white;
 }
 
 .brand {
@@ -195,6 +195,7 @@
   text-decoration: none;
   display: inline-block;
   font-size: 18px;
+  padding: 0 !important;
 }
 
 .brand-list {
@@ -251,10 +252,10 @@ td .detail-name {
   margin: 20px 50px 0 50px;
 }
 
-.lipstickList {
-  width: 150px;
+.brandList {
+  width: 380px;
   text-align: center;
-  margin: 0 65px;
+  margin: 0;
 }
 
 .accent--text {
@@ -327,4 +328,11 @@ img.lipstickList {
 
 .image-container {
   width: 70px;
+}
+
+img.preview {
+  width: 200px;
+  background-color: white;
+  border: 1px solid #ddd;
+  padding: 5px;
 }
