--- a/src/style/style.css
+++ b/src/style/style.css
@@ -194,9 +194,32 @@
   /* padding: 10px 30px 10px 30px; */
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  /* display: inline-block; */
   font-size: 18px;
+  font-weight: bold;
   padding: 0 !important;
+  float: left;
+}
+
+.num-branch,
+.num-brand,
+.num-collection {
+  color: gray;
+  /* padding: 10px 30px 10px 30px; */
+  /* text-align: center; */
+  text-decoration: none;
+  /* display: inline-block; */
+  /* font-size: 16px; */
+  padding: 0 !important;
+  margin: 5px 0px 0px 0px;
+  float: right;
+}
+
+.num-collection {
+  color: gray;
+  text-decoration: none;
+  padding: 0 !important;
+  /* margin: 5px 0px 0px 0px; */
 }
 
 .brand-list {
